--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link" aria-current="page" href="#">Map</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/list.html">List</a>
+          <a class="nav-link" href="list.html">List</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
