--- a/list.html
+++ b/list.html
@@ -114,7 +114,8 @@ title: "Estates under threat"
     <span class="visually-hidden">Next</span>
   </a>
 </div>
-
+	      </section>
+	    
 <!----------beginning-of-cards-section------------------->
  <div class="album py-5 bg-light">
     <div class="container">
