--- a/list.html
+++ b/list.html
@@ -140,7 +140,11 @@ title: "Estates under threat"
           </div>
 	{% endfor %}	
         </div>
-	      
+
+	    </div>
+        </div>
+   </div>
+
 	      
 
 
