--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Estates under threat
+title: "Estates under threat"
+---
 
  <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
   <iframe src="leafletmap.html" frameborder="0"
