--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@ title: "Estates under threat"
 	                            <a target="_blank" href="{{ estate.url }}" data-toggle="tooltip" data-placement="top" title="Open in new tab">Read more here: <i class="icon-popup"></i></a>
       </div>
     </div>
- 
+ {% endfor %}
   </div>
   <a class="carousel-control-prev" href="#carouselExampleDark" role="button" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
