--- a/list.html
+++ b/list.html
@@ -59,7 +59,7 @@ title: "Estates under threat"
                       <h5 class="card-title">{{ estate.name }}</h5>
 		      </a>
 		        <p class="card-text">{{ estate.excerpt }}</p>
-                      <a target="_blank" href="{{ estate.url }}" data-toggle="tooltip" data-placement="top" title="Open in new tab">Read more here: <i class="icon-popup"></i></a>
+                      <a target="_blank" href="{{ site.baseurl }}/{{ estate.url }}" data-toggle="tooltip" data-placement="top" title="Open in new tab">Read more here: <i class="icon-popup"></i></a>
                  
              
             </div>
