--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@ title: "Estates under threat"
           </div>
         </div>
       </div>
-      
+      {% endfor %}
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
