--- a/list.html
+++ b/list.html
@@ -13,8 +13,7 @@ title: "Estates under threat"
     <div class="carousel-inner">
 	     {% for estate in site.estates %}
     <div class="carousel-item {% if forloop.first %}active{% endif %}" data-bs-interval="4000">
-	            <img class="bd-placeholder-img" width="100%" height="100%" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" src="{{ estate.images.first.image_path }}" fill="#777"/>
-	    
+	        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/><img href="{{ estate.images.first.image_path }}"/></svg>    
         <div class="container">
           <div class="carousel-caption text-start">
 	      <h5><a href="{{ estate.url }}">{{ estate.name }}</a></h5>
