--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@ title: "Estates under threat"
 ---
 
 
- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+ <div id="myCarousel" class="carousel slide multi-item-carousel" data-bs-ride="carousel">
     <ol class="carousel-indicators">
       <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
       <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
