--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@ title: "Estates under threat"
 ---
 
 
- <div id="myCarousel" class="carousel slide multi-item-carousel" data-bs-ride="carousel">
+ <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
       <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
       <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
@@ -13,7 +13,7 @@ title: "Estates under threat"
     <div class="carousel-inner">
 	     {% for estate in site.estates %}
     <div class="carousel-item {% if forloop.first %}active{% endif %}" data-bs-interval="4000">
-	        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/><img src="{{ estate.images.first.image_path }}"></svg>    
+	        <svg class="bd-placeholder-img" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/><img src="{{ estate.images.first.image_path }}"></svg>    
         <div class="container">
           <div class="carousel-caption text-start">
 	      <h5><a href="{{ estate.url }}">{{ estate.name }}</a></h5>
