--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@ title: "Estates under threat"
 ---
 
 
-	    <section class="py-5 text-center container">
+	    <section class="py-5 text-center container bg-light">
     <div class="row py-lg-5">
       <div class="col-lg-8 col-md-8 mx-auto">
 
